--- a/views/editor/sidenav.jade
+++ b/views/editor/sidenav.jade
@@ -1,6 +1,6 @@
 nav#sidenav
 		p
 			a(id="sidemen" href="/editor/dashboard") Dashboard
-			a(id="sidemen" href="/editor/sensorInstance") Sensor Instance
+			a(id="sidemen" href="/sensor/getSensors") Sensor Instance
 			a(id="sidemen" href="/editor/account") Account
 			a(id="sidemen" href="/editor/billing") Billing
