--- a/views/data/sidenav.jade
+++ b/views/data/sidenav.jade
@@ -1,7 +1,7 @@
 nav#sidenav
 		p
 			a(id="sidemen" href="/editor/dashboard") Dashboard
-			a(id="sidemen" href="/sensor/sensorInstance") Sensor Instance
+			a(id="sidemen" href="/sensor/getSensors") All Available Sensors
 			a(id="sidemen" href="/data/mobileSensor") SmartPhone Sensors
 			a(id="sidemen" href="/editor/account") Account
 			a(id="sidemen" href="/editor/billing") Billing
