--- a/views/editor/billing.jade
+++ b/views/editor/billing.jade
@@ -7,9 +7,7 @@ block main
         block content
             div.center
                 form(action="/data/retrieve", method="POST")
-                    .ui.inverted.tabular.menu
-                        .active.item(href="/editor/overview") Overview
-                        a.item(href="/editor/map") Map
+
                     table(border="1" cellpadding="5" cellspacing="5" width="100%" height="35")
                         th(bgcolor="#F7819F" height="50")
                             | Location
@@ -33,7 +31,7 @@ block main
                                     td
                                         | #{val.to}
                                     td
-                                        | #{dat.costPerMonth}
+                                        | #{dat.costPerMonth} $
                     br
 
 block post_wrap
