--- a/views/data/mobileData.jade
+++ b/views/data/mobileData.jade
@@ -57,7 +57,7 @@ block main
 						}]
 					});
 					
-					var socket = io.connect('http://localhost:8588');
+					var socket = io.connect('http://52.36.242.48:8588');
 					
 						
 						var det;
