--- a/views/data/mobiles.jade
+++ b/views/data/mobiles.jade
@@ -6,6 +6,7 @@ block main
 	div.editor
 		block content
 			div.center
+				h1(style=" background-color: lightgrey;") Subscribed Mobiles Overview
 				a(class="ui inverted green button" href="/data/addphone") Add Phone
 				p
 				form(action="/data/mobileDataRetrieve", method="POST")
