--- a/views/data/qrcode.jade
+++ b/views/data/qrcode.jade
@@ -10,6 +10,7 @@ block main
 			div.center
 
 				input(id="text" type="hidden" value="#{data}" style="width:80%")
+				h1(style=" background-color: lightgrey;") Mobile Provisioning
 				| Add your phone with this QR Code! After adding go back to SmartPhone Sensor Page.
 				p
 				svg(xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink")
