--- a/views/admin/addAdmins.jade
+++ b/views/admin/addAdmins.jade
@@ -27,7 +27,7 @@ block main
 								input(type="checkbox", value="remember-me", id="remember_me")
 								label(for="remember_me") Remember me
 
-							button(class="btn flt-right",type="submit") Create
+							button(class="btn flt-right",type="submit",onclick="javascript:alert('New Admin Added!!')") Create
 				
 block post_wrap
 	
