--- a/views/data/mobileData.jade
+++ b/views/data/mobileData.jade
@@ -35,7 +35,7 @@ block main
 							x: -20 //center
 						},	
 						subtitle: {
-							text: 'Source: Cencoos.org',
+							text: 'Source: Your Mobile',
 							x: -20
 						},
 						xAxis: {
@@ -52,7 +52,7 @@ block main
 							}
 						},
 						series: [{
-							name: "Accelerometer",
+							name: "Temperature",
 							data: []
 						}]
 					});
