--- a/views/editor/overview.jade
+++ b/views/editor/overview.jade
@@ -6,6 +6,7 @@ block main
 	div.editor
 		block content
 			div.center
+				h1(style=" background-color: lightgrey;") Subscribed Sensors Overview
 				form(action="/data/retrieve", method="POST")
 					.ui.inverted.tabular.menu
 						.active.item(href="/editor/overview") Overview
