--- a/views/editor/requestSensor.jade
+++ b/views/editor/requestSensor.jade
@@ -56,7 +56,7 @@ block main
 		p
 		div(id="tab")
 		p
-		label(id="sensorName" style="font-weight: bold; margin-left:3%;margin-top:0.5%;margin-right:2%") Sensor Name
+		label(id="sensorName" style="font-weight: bold; margin-left:3%;margin-top:0.5%;margin-right:2%") Your Name
 		input(id="sensorName" name="sensorName" style="margin-top:0.5%" type="input"  required="true")
 		p
 		label(id="lat" style="font-weight: bold; margin-left:3%;margin-top:0.5%;margin-right:2%") Latitude
@@ -65,7 +65,7 @@ block main
 		label(id="lan" style="font-weight: bold; margin-left:3%;margin-top:0.5%;margin-right:2%") Longitude
 		input(id="lngSelected" name="lngSelected" type="input" value="")
 		p
-		input(class="ui inverted blue button" id="but" style="margin-left:5%" type="submit" value="Request For Sensor")
+		input(class="ui inverted blue button" id="but" style="margin-left:5%" type="submit" value="Get this!")
 		p
 
 
