--- a/views/editor/sidenav.jade
+++ b/views/editor/sidenav.jade
@@ -5,4 +5,4 @@ nav#sidenav
 			a(id="sidemen" href="/data/mobileSensor") SmartPhone Sensors
 			a(id="sidemen" href="/editor/account") Account
 			a(id="sidemen" href="/editor/billing") Billing
-			a(id="sidemen" href="/newSensor/loadRequestPage") Request a Sensor
+			a(id="sidemen" href="/newSensor/loadRequestPage") A home for you
