--- a/views/pages/home.jade
+++ b/views/pages/home.jade
@@ -3,11 +3,8 @@ extends ../layout.jade
 block pre_main
 	div#banner
 		div.content
-			h2
-				| Simple Access
-				| Alerting - When it happens
-				| Focus only on your dev - you'll want it!
-				h4 
+			h4
+				Welcome to my web site
 
 block main
 	div.home
